--- a/documents.html
+++ b/documents.html
@@ -27,7 +27,7 @@
                         <button class="btn btn-outline-success" type="submit">Search</button></p>
                     </form>
                 </div>
-                <a class="btn btn-outline-secondary" href="documents.html" role="button">Nouveau Document</a>
+                <a class="btn btn-outline-secondary" href="doc_create.html" role="button">Nouveau Document</a>
             </div>
             
             
