MàJ index et boutons recherche. Modifier classes index

--- a/doc_create.html
+++ b/doc_create.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/all.css">
         <title>Bédéthèque</title>
     </head>
     <body>
@@ -20,7 +21,7 @@
                 <div id="rechercheISBN">
                     <form class="d-flex col-6 mx-auto">
                         <input class="form-control me-2" type="search" placeholder="ISBN" aria-label="Search" >
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button>
                     </form>
                 </div>
                 <div id="champsCreateDoc" class="mt-3 text-center">
@@ -47,3 +48,7 @@
 
                 </div>
             </div>
+        </div>
+        <script src="assets/js/all.js"></script>
+    </body>
+</html>
