--- a/documents.html
+++ b/documents.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/all.css">
         <title>Bédéthèque</title>
     </head>
     <body>
@@ -20,17 +21,16 @@
                 <div id="champsRechercheDoc">
                     <form id="rechercheDocument">
                         <p class="d-flex"><input class="form-control me-2" type="search" placeholder="Recherche par titre" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button></p>
+                        <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button></p>
                         <p class="d-flex"><input class="form-control me-2" type="search" placeholder="Recherche par auteur" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button></p>
+                        <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button></p>
                         <p class="d-flex"><input class="form-control me-2" type="search" placeholder="Recherche par série" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button></p>
+                        <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button></p>
                     </form>
                 </div>
                 <a class="btn btn-outline-secondary" href="doc_create.html" role="button">Nouveau Document</a>
             </div>
-            
-            
         </div>
+        <script src="assets/js/all.js"></script>
     </body>
 </html>
