--- a/documents.html
+++ b/documents.html
@@ -11,7 +11,7 @@
     <body>
         <div id="wrapper">
             <div id="header">
-                <div class="alert alert-success mt-2 text-center">Centre Culturel des Marmusots</div>
+                <div class="alert alert-success mt-2 text-center text-uppercase">Centre Culturel des Marmusots</div>
             </div>
             <nav id="navAgent" class="text-center d-flex justify-content-around col-8 mx-auto">
                 <a class="btn btn-success" href="index.html" role="button">Accueil</a>
