--- a/interface_agent.html
+++ b/interface_agent.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/all.css">
         <title>Bédéthèque</title>
     </head>
     <body>
@@ -22,8 +23,7 @@
                 <a class="btn btn-outline-secondary" href="emprunt.html" role="button">Emprunt Doc</a>
                 <a class="btn btn-outline-secondary" href="retour.html" role="button">Retour Doc</a>
             </div>
-            
-            
         </div>
+        <script src="assets/js/all.js"></script>
     </body>
 </html>
