--- a/interface_agent.html
+++ b/interface_agent.html
@@ -14,7 +14,8 @@
                 <div class="alert alert-success mt-2 text-center">Centre Culturel des Marmusots</div>
             </div>
             <nav id="navAgent" class="text-center d-flex justify-content-around col-8 mx-auto">
-                <a class="btn btn-success" href="index.html" role="button">Accueil</a>
+                <a class="btn btn-primary" href="index.html" role="button">Accueil</a>
+                <a class="btn btn-primary" href="interface_agent.html" role="button">Menu</a>
                 <input class="btn btn-danger" type="submit" value="Déconnexion">
             </nav>
             <div id="mainAgent" class="text-center mt-5 gap-3 d-grid col-6 mx-auto">
