--- a/doc_create.html
+++ b/doc_create.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/all.css">
-        <title>Bédéthèque</title>
+        <title>Nouveau document</title>
     </head>
     <body>
         <div id="wrapper">
@@ -14,7 +14,8 @@
                 <div class="alert alert-success mt-2 text-center text-uppercase">Centre Culturel des Marmusots</div>
             </div>
             <nav id="navAgent" class="text-center d-flex justify-content-around col-8 mx-auto">
-                <a class="btn btn-success" href="index.html" role="button">Accueil</a>
+                <a class="btn btn-primary" href="index.html" role="button">Accueil</a>
+                <a class="btn btn-primary" href="interface_agent.html" role="button">Menu</a>
                 <input class="btn btn-danger" type="submit" value="Déconnexion">
             </nav>
             <div id="mainCreateDoc" class="mt-5">
@@ -25,8 +26,8 @@
                     </form>
                 </div>
                 <div id="champsCreateDoc" class="mt-3 text-center">
-                    <p><input type="text" name="ISBN" placeholder="ISBN" id="isbnNewDoc"></p>
-                    <p><input type="text" name="" placeholder="Titre" id="titreNewDoc"></p>
+                    <p><input class="w-50" type="text" name="ISBN" placeholder="ISBN" id="isbnNewDoc"></p>
+                    <p><input class="w-50" type="text" name="" placeholder="Titre" id="titreNewDoc"></p>
                     <p class="d-flex mx-auto w-50" id="createSelectAuteur">
                         <select class="form-select" aria-label="Default select example">
                             <option selected>Auteur</option>
@@ -45,6 +46,12 @@
                         </select>
                         <button type="button" class="btn btn-outline-dark" id="newAuteur">+</button>
                     </p>
+                    <p><input class="w-50" type="text" name="ISBN" placeholder="Code Exemplaire" id="exemplaireNewDoc"></p>
+                    <p><input class="w-50" type="text" name="" placeholder="Emplacement" id="emplacementNewDoc"></p>
+                </div>
+                <div id="btnsSubCreate" class="text-center">
+                    <input class="btn btn-outline-success" type="submit" value="Valider" id="btnValideCreate">
+                    <input class="btn btn-outline-danger" type="submit" value="Annuler" id="btnCancelCreate">
                 </div>
             </div>
         </div>
