--- a/doc_create.html
+++ b/doc_create.html
@@ -51,7 +51,7 @@
                 <div id="btnsSubCreate" class="text-center">
                     <input class="btn btn-outline-success" type="submit" value="Valider" id="btnValideCreate">
                     <input class="btn btn-outline-danger" type="submit" value="Annuler" id="btnCancelCreate">
-                    </form>
+                    <!-- </form> Ò--> 
                 </div>
             </div>
         </div>
